do homework part 1.

--- a/src/test/resources/main.properties
+++ b/src/test/resources/main.properties
@@ -1,6 +1,4 @@
 userName=bsuser_Sj2FLq
 accessKey=J38rNpK1EGh1xGQZh2fP
 remoteUrl=https://hub.browserstack.com/wd/hub
-app=bs://sample.app
-device=Samsung Galaxy S22 Ultra
-osVersion=12.0
+app=bs://dcf80374f83f58bcb1b92375c44cbc2073a46cc0
