--- a/build.gradle
+++ b/build.gradle
@@ -1,77 +1,46 @@
 plugins {
-    id 'java-library'
+    id 'java'
     id 'io.qameta.allure' version '2.11.2'
+}
+
+allure {
+    report {
+        version.set("2.29.0")
+    }
+    adapter {
+        aspectjWeaver.set(true)
+        frameworks {
+            junit5 {
+                adapterVersion.set("2.29.1")
+            }
+        }
+    }
 }
 
 repositories {
     mavenCentral()
 }
 
-def selenideVersion = "6.19.1",
-    allureVersion = "2.21.0",
-    junitVersion = "5.10.1"
-
-allure {
-    report {
-        version.set(allureVersion)
-    }
-    adapter {
-        aspectjWeaver.set(true)
-        frameworks {
-            junit5 {
-                adapterVersion.set(allureVersion)
-            }
-        }
-    }
-}
-
-compileJava {
-    options.encoding = 'UTF-8'
-}
-compileTestJava {
-    options.encoding = 'UTF-8'
-}
-
 dependencies {
-    testImplementation(
-            "com.codeborne:selenide:$selenideVersion",
-            "io.qameta.allure:allure-selenide:$allureVersion",
-            "io.appium:java-client:8.3.0",
-            "org.aeonbits.owner:owner:1.0.12",
-            "commons-io:commons-io:2.20.0",
-            "io.rest-assured:rest-assured:5.3.0",
-            "org.junit.jupiter:junit-jupiter:$junitVersion",
-            "org.slf4j:slf4j-simple:2.0.7"
-    )
-}
+    testImplementation 'org.aspectj:aspectjweaver:1.9.24'
+    testImplementation 'com.codeborne:selenide:6.13.0'
+    testImplementation 'io.qameta.allure:allure-selenide:2.29.1'
+    testImplementation 'io.appium:java-client:8.3.0'
+    testImplementation 'io.rest-assured:rest-assured:5.5.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.0'
+    testImplementation 'org.slf4j:slf4j-simple:2.0.7'
+    testImplementation 'org.aeonbits.owner:owner:1.0.4'
+    testImplementation 'commons-io:commons-io:2.20.0'
 
-test {
-    useJUnitPlatform()
-    systemProperties(System.getProperties())
 }
 
 tasks.withType(Test) {
     useJUnitPlatform()
-    systemProperty "console.encoding", "UTF-8"
     systemProperties(System.getProperties())
-
     testLogging {
-        events "started", "skipped", "failed", "standard_error", "standard_out"
-        exceptionFormat "short"
-        showStandardStreams = true
+        lifecycle {
+            events "started", "skipped", "failed", "standard_error", "standard_out"
+            exceptionFormat "short"
+        }
     }
-}
-
-tasks.register('testEmulator', Test) {
-    systemProperty 'deviceHost', 'emulator'
-    dependsOn testClasses
-    testClassesDirs = sourceSets.test.output.classesDirs
-    classpath = sourceSets.test.runtimeClasspath
-}
-
-tasks.register('testBrowserstack', Test) {
-    systemProperty 'deviceHost', 'browserstack'
-    dependsOn testClasses
-    testClassesDirs = sourceSets.test.output.classesDirs
-    classpath = sourceSets.test.runtimeClasspath
 }
