--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,13 @@ allure {
     }
 }
 
+compileJava {
+    options.encoding = 'UTF-8'
+}
+compileTestJava {
+    options.encoding = 'UTF-8'
+}
+
 repositories {
     mavenCentral()
 }
