--- a/src/test/resources/main.properties
+++ b/src/test/resources/main.properties
@@ -1,4 +1,14 @@
 userName=bsuser_Sj2FLq
 accessKey=J38rNpK1EGh1xGQZh2fP
 remoteUrl=https://hub.browserstack.com/wd/hub
-app=bs://dcf80374f83f58bcb1b92375c44cbc2073a46cc0
+app.browserstack=bs://dcf80374f83f58bcb1b92375c44cbc2073a46cc0
+device=Samsung Galaxy S22 Ultra
+osVersion=12.0
+
+remote.url=http://127.0.0.1:4723
+app=/path/to/wikipedia.apk
+app.package=org.wikipedia.alpha
+app.activity=org.wikipedia.main.MainActivity
+device.name=emulator-5554
+platform.version=16.0
+appiumClient.version=8.3.0
